# slopci

./: .gitignore  Cargo.toml  README.md  flake.nix
nixci/: Cargo.toml
nixci-secrets/: Cargo.toml
nixci-secrets/src/: keyderive.rs  main.rs  protocol.rs
nixci/migrations/: 001_initial.sql
nixci/src/: config.rs  db.rs  main.rs  models.rs  templates.rs
nixci/src/actions/: microvm.rs  mod.rs  secrets.rs
nixci/src/builder/: config.rs  mod.rs  runner.rs
nixci/src/forge/: github.rs  mod.rs
nixci/src/web/: mod.rs  pages.rs  partials.rs  sse.rs  webhooks.rs
