[package]
name = "nixci-secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
age = { version = "0.10", features = ["armor"] }
hkdf = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
bech32 = "0.9"
