[package]
name = "nixci"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
maud = { version = "0.27", features = ["axum"] }
tower-http = { version = "0.6", features = ["fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
octocrab = "0.44"
hmac = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
jsonwebtoken = "9"
axum-extra = { version = "0.10", features = ["typed-header"] }
hex = "0.4"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
